# feng_ws

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/attitude_control/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/libmavconn/: .catkin  .rosinstall  local_setup.sh
devel/.private/mav_msgs/: .catkin
devel/.private/mav_planning_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/mav_state_machine_msgs/: .catkin  local_setup.sh
devel/.private/mav_system_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros/: .catkin
devel/.private/mavros_extras/: .catkin  setup.sh
devel/.private/mavros_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/position_control/: .catkin  setup.sh
devel/.private/rotors_comm/: .catkin  .rosinstall
devel/.private/rotors_control/: .catkin  local_setup.sh  setup.sh
devel/.private/rotors_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rotors_evaluation/: .catkin  .rosinstall  local_setup.sh
devel/.private/rotors_gazebo/: .catkin
devel/.private/rotors_gazebo_plugins/: .catkin  .rosinstall
devel/.private/rotors_hil_interface/: .catkin  .rosinstall
devel/.private/rotors_joy_interface/: .catkin  setup.sh
devel/.private/rqt_rotors/: .catkin  .rosinstall
devel/.private/target_detection/: .catkin  local_setup.sh  setup.sh
devel/.private/test_mavros/: .catkin  .rosinstall
devel/.private/traj_gen/: .catkin  .rosinstall  setup.sh
devel/include/attitude_control/: controllerDynAttConfig.h  des_acc_ang.h  min_snap_traj.h  uav_state.h
devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
devel/include/mav_planning_msgs/: ChangeNameService.h  ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerService.h  PlannerServiceRequest.h  PlannerServiceResponse.h  Point2D.h  PointCloudWithPose.h  Polygon2D.h  PolygonService.h  PolygonServiceRequest.h  PolygonServiceResponse.h  PolygonWithHoles.h  PolygonWithHolesStamped.h  PolynomialSegment.h  PolynomialSegment4D.h  PolynomialTrajectory.h  PolynomialTrajectory4D.h
devel/include/mav_state_machine_msgs/: RunTaskService.h  RunTaskServiceRequest.h  RunTaskServiceResponse.h  StartStopTask.h
devel/include/mav_system_msgs/: CpuInfo.h  ProcessInfo.h
devel/include/mavros_msgs/: ADSBVehicle.h  ActuatorControl.h  Altitude.h  AttitudeTarget.h  BatteryStatus.h  CamIMUStamp.h  CommandBool.h  CommandBoolRequest.h  CommandBoolResponse.h  CommandCode.h  CommandHome.h  CommandHomeRequest.h  CommandHomeResponse.h  CommandInt.h  CommandIntRequest.h  CommandIntResponse.h  CommandLong.h  CommandLongRequest.h  CommandLongResponse.h  CommandTOL.h  CommandTOLRequest.h  CommandTOLResponse.h  CommandTriggerControl.h  CommandTriggerControlRequest.h  CommandTriggerControlResponse.h  CommandTriggerInterval.h  CommandTriggerIntervalRequest.h  CommandTriggerIntervalResponse.h  CommandVtolTransition.h  CommandVtolTransitionRequest.h  CommandVtolTransitionResponse.h  CompanionProcessStatus.h  DebugValue.h  EstimatorStatus.h  ExtendedState.h  FileChecksum.h  FileChecksumRequest.h  FileChecksumResponse.h  FileClose.h  FileCloseRequest.h  (+115 more)
devel/include/position_control/: controllerPOSCFGConfig.h  des_acc_ang.h  min_snap_traj.h  target_dect_msg.h
devel/include/rotors_comm/: Octomap.h  OctomapRequest.h  OctomapResponse.h  RecordRosbag.h  RecordRosbagRequest.h  RecordRosbagResponse.h  WindSpeed.h
devel/include/target_detection/: target_dect_msg.h
devel/include/traj_gen/: controllerDynConfig.h  min_snap_traj.h
devel/lib/attitude_control/: quat_att_control_node
devel/lib/mavros/: gcs_bridge  mavros_node
devel/lib/mavros_extras/: servo_state_publisher  visualization
devel/lib/pkgconfig/: attitude_control.pc  catkin_tools_prebuild.pc  libmavconn.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  mavlink.pc  mavros.pc  mavros_extras.pc  mavros_msgs.pc  position_control.pc  rotors_comm.pc  rotors_control.pc  rotors_description.pc  rotors_evaluation.pc  rotors_gazebo.pc  rotors_gazebo_plugins.pc  rotors_hil_interface.pc  rotors_joy_interface.pc  rqt_rotors.pc  target_detection.pc  test_mavros.pc  traj_gen.pc
devel/lib/position_control/: pos_control_node
devel/lib/rotors_control/: lee_position_controller_node  roll_pitch_yawrate_thrust_controller_node
devel/lib/rotors_gazebo/: hovering_example  waypoint_publisher  waypoint_publisher_file
devel/lib/rotors_hil_interface/: rotors_hil_interface_node
devel/lib/rotors_joy_interface/: rotors_joy_interface
devel/lib/test_mavros/: sitl_test_node
devel/lib/traj_gen/: trajectory_gen_node
logs/attitude_control/: build.cmake.000.log.stderr
logs/position_control/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/rotors_hil_interface/: build.make.000.log.stderr
logs/target_detection/: build.check.003.log.stderr
src/attitude_control/: CMakeLists.txt
src/attitude_control/cfg/: controllerDynAtt.cfg
src/attitude_control/include/: common.h  parameters.h  parameters_ros.h  quat_att_control.h
src/attitude_control/launch/: tunning_pelican_Gazebo.launch
src/attitude_control/msg/: uav_state.msg
src/attitude_control/src/nodes/: quat_att_control_node.cpp
src/position_control/: CMakeLists.txt  LICENSE  package.xml
src/position_control/cfg/: controllerPOSCFG.cfg
src/position_control/include/: common.h  parameters.h  parameters_ros.h  pd_pos_controller.h
src/position_control/launch/: tuning_firefly.launch  tuning_firefly_Gazebo.launch  tuning_firefly_Gazebo_msf.launch
src/position_control/msg/: des_acc_ang.msg
src/position_control/src/nodes/: pos_controller_node.cpp
src/target_generation/: CMakeLists.txt
src/target_generation/msg/: target_dect_msg.msg
src/traj_gen/: CMakeLists.txt  README.md
(+1022 files in other folders)
