<?xml version="1.0"?>
<package format="2">
  <name>position_control</name>
  <version>0.0.0</version>
  <description>Position controller</description>

  <maintainer email="mathieu-ulysse.ashby@polymtl.ca">Mathieu Ashby</maintainer>

  <license>BSD</license>

  <author email="mathieu-ulysse.ashby@polymtl.ca">Mathieu Ashby</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>traj_gen</depend>
  <depend>target_detection</depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
